--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,118 +1,44 @@
-/* eric functionality */
 #homepage {
   background-color: #343a404d;
+  
 }
 .homepage-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+
 }
-.carousel-item,
+
+.carousel-item, 
 .carousel-item-active,
 img {
   height: 500px;
   width: 100%;
 }
+
 .carousel-item,
 h5 {
-  color: #28A745;
+  color: #28a745;
 }
+
 a {
   text-decoration: none;
   color: black;
 }
+
 .faq-item {
   margin-right: 100px;
 }
+
 #carousel-container {
   width: 100%;
 }
+
 .header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 1px 5px #FFC107;
-}
-
-/* aris functionality */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Tomorrow", sans-serif;
-  height: 100vh;
-  background-image: linear-gradient(
-    to top,
-    #2e1753,
-    #1f1746,
-    #131537,
-    #0d1028,
-    #050819
-  );
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-.text {
-  position: absolute;
-  top: 10%;
-  color: #fff;
-  text-align: center;
-}
-h1 {
-  font-size: 50px;
-}
-.star {
-  position: absolute;
-  width: 2px;
-  height: 2px;
-  background: #fff;
-  right: 0;
-  animation: starTwinkle 3s infinite linear;
-}
-.astronaut img {
-  width: 100px;
-  position: absolute;
-  top: 55%;
-  animation: astronautFly 6s infinite linear;
-}
-@keyframes astronautFly {
-  0% {
-    left: -100px;
-  }
-  25% {
-    top: 50%;
-    transform: rotate(30deg);
-  }
-  50% {
-    transform: rotate(45deg);
-    top: 55%;
-  }
-  75% {
-    top: 60%;
-    transform: rotate(30deg);
-  }
-  100% {
-    left: 110%;
-    transform: rotate(45deg);
-  }
-}
-@keyframes starTwinkle {
-  0% {
-    background: rgba(255, 255, 255, 0.4);
-  }
-  25% {
-    background: rgba(255, 255, 255, 0.8);
-  }
-  50% {
-    background: rgba(255, 255, 255, 1);
-  }
-  75% {
-    background: rgba(255, 255, 255, 0.8);
-  }
-  100% {
-    background: rgba(255, 255, 255, 0.4);
-  }
+  box-shadow: 1px 5px #ffc107;
 }
