--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,22 @@
-#homepage {
-  background-color: #343a404d;
+/* homepage.html */
+.content{
+  background-color:#343a404d;
+  height: fit-content;
 }
+
 .homepage-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 30px;
   flex-wrap: wrap;
+  margin-top: 30px;
+
 }
 
-.carousel-item,
-img {
+img, 
+.carousel-inner,
+.carousel-item 
+{
   height: 500px;
   width: 100%;
 }
@@ -36,8 +42,66 @@ a {
 .homepage-header {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   border: 3px solid #ffc107;
+  
+}
+
+/* generic form.html */
+
+form {
+  font-size: 30px;
+}
+
+input{
+  font-size: 30px;
+  width: 300px;
+}
+
+
+
+#forms {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 20px;
+  align-items: center;
+  height: 800px; 
+  
+}
+
+
+.btn-form{
+  border: none;
+  background-color:#28a745;
+  box-shadow: 1px 1px 5px black;
+  margin-top: 5px;
+  font-size: 22px;
+}
+
+.forms-header{
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  border-bottom: 1px solid black;
+  margin-bottom: 30px;
+  
+}
+
+
+input {
+  background-color: #343a404d;
+  color: #ffc107;
+}
+
+/* profile/profile.edit.html */
+#profile-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
 }
 
 /* Aris Fornasari's styling for 404 errors*/
@@ -120,172 +184,4 @@ h1 {
   100% {
     background: rgba(255, 255, 255, 0.4);
   }
-}
-
-/* 500 error styling bellow */
-
-.error-wrapper {
-  background-color: #292929;
-  height: 100%;
-  padding-top: 10%;
-  padding-bottom: 25%;
-}
-
-.error-wrapper .error-container {
-  -webkit-transform: skew(0deg, -10deg);
-  -moz-transform: skew(0deg, -10deg);
-  -o-transform: skew(0deg, -10deg);
-  -ms-transform: skew(0deg, -10deg);
-  transform: skew(0deg, -10deg);
-  background-color: #1dbc9c;
-  padding: 60px;
-}
-
-.error-wrapper .error-container .error {
-  -webkit-transform: skew(0deg, 10deg);
-  -moz-transform: skew(0deg, 10deg);
-  -o-transform: skew(0deg, 10deg);
-  -ms-transform: skew(0deg, 10deg);
-  transform: skew(0deg, 10deg);
-  margin: 0 auto;
-  text-align: center;
-  width: 350px;
-}
-
-.error-wrapper .error-container .error .error-title {
-  font-size: 28px;
-  font-weight: 700;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-}
-
-.error-wrapper .error-container .error .error-number {
-  font-size: 100px;
-  font-weight: 700;
-  letter-spacing: 5px;
-  text-shadow: 0 3px 0 #292929, 0 14px 10px rgba(0, 0, 0, 0.15),
-    0 24px 2px rgba(0, 0, 0, 0.1), 0 34px 30px rgba(0, 0, 0, 0.1);
-}
-
-.error-wrapper .error-container .error .error-description {
-  font-size: 14px;
-  font-weight: 300;
-  padding: 0 40px;
-}
-
-.error-wrapper .error-container .error .error-or {
-  height: 20px;
-  margin: 30px 0 10px;
-  position: relative;
-  text-align: center;
-}
-
-.error-wrapper .error-container .error .error-or .or-line {
-  background-color: #169077;
-  height: 1px;
-  left: 40px;
-  position: absolute;
-  right: 40px;
-  top: 10px;
-}
-
-.error-wrapper .error-container .error .error-or .or {
-  -lh-property: 0;
-  left: -webkit-calc(50% - 30px);
-  left: -moz-calc(50% - 30px);
-  left: calc(50% - 30px);
-  background-color: #1dbc9c;
-  height: 20px;
-  margin: 0 auto;
-  position: absolute;
-  text-transform: uppercase;
-  top: 2px;
-  width: 60px;
-}
-
-.error-wrapper .error-container .error .error-textbox {
-  padding: 0 40px;
-}
-
-.error-wrapper .error-container .error .error-textbox .form-control {
-  background-color: #292929;
-  border: 0;
-}
-
-.error-wrapper .error-container .error .error-submit {
-  padding: 0 40px;
-}
-
-.error-wrapper .error-container .error .error-submit input {
-  font-size: 13px;
-  font-weight: 300;
-  text-transform: uppercase;
-}
-
-.error-wrapper .error-container .error .error-actions {
-  display: block;
-  height: 60px;
-  list-style: none;
-  padding: 5px;
-}
-
-.error-wrapper .error-container .error .error-actions > li {
-  display: inline-block;
-  float: left;
-  width: 33%;
-}
-
-.error-wrapper .error-container .error .error-actions > li a i {
-  color: #292929;
-  font-size: 32px;
-}
-
-.error-wrapper .error-container.error-500 {
-  background-color: #ffc107;
-}
-
-.error-wrapper .error-container.error-500 .error .error-or .or-line {
-  background-color: #040300;
-}
-
-.error-wrapper .error-container.error-500 .error .error-or .or {
-  background-color: #ffc107;
-}
-
-.error-wrapper .error-container.error-401 {
-  background-color: #34b5dc;
-}
-
-.error-wrapper .error-container.error-401 .error .error-or .or-line {
-  background-color: #2198bd;
-}
-
-.error-wrapper .error-container.error-401 .error .error-or .or {
-  background-color: #34b5dc;
-}
-
-@media only screen and (max-width: 600px) {
-  .error-wrapper {
-    padding-top: 5%;
-  }
-  .error-wrapper .error-container {
-    -webkit-transform: skew(0deg, -5deg);
-    -moz-transform: skew(0deg, -5deg);
-    -o-transform: skew(0deg, -5deg);
-    -ms-transform: skew(0deg, -5deg);
-    transform: skew(0deg, -5deg);
-  }
-  .error-wrapper .error-container .error {
-    -webkit-transform: skew(0deg, 5deg);
-    -moz-transform: skew(0deg, 5deg);
-    -o-transform: skew(0deg, 5deg);
-    -ms-transform: skew(0deg, 5deg);
-    transform: skew(0deg, 5deg);
-    width: auto;
-  }
-}
-.returnhomebtn {
-  background-color: rgb(233, 168, 4);
-  font-family: "Times New Roman", Times, serif;
-  border-radius: 25px;
 }
