--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 
 
-
+<div>
   <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="{% url 'homepage' %}">GamerZone</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -89,19 +89,25 @@
       {% endif %}
     </div>
   </nav>
+</div>
   {% if messages %}
   {% for message in messages %}
     <script>M.toast({html: "{{message}}", classes: 'blue rounded', displayLength:5000});</script>
   {% endfor %}
 {% endif %}
 
-  {% block content %}{% endblock %}
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
     integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
     crossorigin="anonymous"></script>
-</body>
-
-</html>
+    
+    <div class="content">
+      
+          {% block content %} {% endblock %}
+       
+      </div>
+  </body>
+  
+  </html>
