--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -1,4 +1,31 @@
-<form action="" method="post">
-  {% csrf_token %} {{ form.as_p }}
-  <input type="submit" value="Submit" />
-</form>
+{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+  </head>
+
+  {% load crispy_forms_tags %}
+{% block content %}
+
+<div id="forms">  
+  <div class="forms-header">
+    <h1>{{header}}</h1>
+    <br>
+  </div>
+
+  <div class="forms-container">
+    
+    <form action="" method="post">
+      {% csrf_token %} {{ form | crispy }}
+      <button class="btn-form"type="submit">Submit</button>
+    </form>
+    
+  </div>
+</div>
+{% endblock %}
+</html>
