--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,10 @@
 /* homepage.html */
-.content{
+html{
   background-color:#343a404d;
+  height: auto;
+}
+body{
+  background-color: initial;
   height: fit-content;
 }
 
@@ -57,6 +61,7 @@ form {
 input{
   font-size: 30px;
   width: 300px;
+  height: 60px;
 }
 
 
