--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -77,7 +77,7 @@
 <div class="homepage-item" style="width: 350px; border-right: 3px solid #ffc107; padding-right: 40px; margin-left: 20px;"">
 <h2>Recent Questions</h2>
 <br>
-{% for faq in faqs %}
+{% for faq in faqs|slice:":4" %}
 <div class="card" style="background-color: #ffc107; font-weight: bold; box-shadow: 1px 1px 30px black;">
   <div class="card-header">
       Game: {{faq.game}}
@@ -123,7 +123,7 @@
     </div>
     <div class="homepage-item" style="width: 350px;">
       <h2>Top Searched Games</h2>
-        {% for game in games %}
+        {% for game in games|slice:":9" %}
         <ul>
           <li>{{game.name}}</li>
         </ul>
