--- a/templates/virtual_tour.html
+++ b/templates/virtual_tour.html
@@ -18,9 +18,8 @@
     <h1>Welcome to the Gamerzone</h1>
       <p>________________________________</p>
       <br>
-    <h4>This is a site where gamers everywhere can talk <br>
-      about, ask about, or just be about games. Feel <br>
-      free to chat with friends while you're at it.</h4>
+    <h4>**Virtual Tour**</h4>
+    <h5>**If you would like to exit virtual tour, Click GamzerZone in the top left**</h5>
       <br>
   </div>
 <div id="homepage-container">
