--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 /* base */
-html{
-  background-color:#343a404d;
+html {
+  background-color: #343a404d;
   height: auto;
 }
-body{
+body {
   background-color: initial;
   height: fit-content;
 }
@@ -15,13 +15,11 @@ body{
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 30px;
-
 }
 
-img, 
+img,
 .carousel-inner,
-.carousel-item 
-{
+.carousel-item {
   height: 500px;
   width: 100%;
 }
@@ -50,7 +48,6 @@ a {
   justify-content: center;
   align-items: center;
   border: 3px solid #ffc107;
-  
 }
 
 /* generic form.html */
@@ -59,14 +56,13 @@ form {
   font-size: 30px;
 }
 
-input{
+input {
   font-size: 30px;
   width: 300px;
   background-image: inherit;
 }
 
-
-#forms-container{
+#forms-container {
   height: 700px;
 }
 #forms {
@@ -89,25 +85,21 @@ input{
   align-items: center;
 }
 
-
-.btn-form{
+.btn-form {
   border: none;
-  background-color:#28a745;
+  background-color: #28a745;
   box-shadow: 1px 1px 10px black;
   margin-top: 5px;
   font-size: 22px;
 }
 
-.forms-header{
+.forms-header {
   display: flex;
   justify-content: center;
   width: 200px;
   border-bottom: 1px solid darkgoldenrod;
   margin-bottom: 50px;
-  
-  
 }
-
 
 input {
   background-color: #343a404d;
@@ -132,14 +124,12 @@ input {
   align-items: center;
   justify-content: space-evenly;
   align-content: space-between;
-  
 }
 
 /* #games,
 img{
   height: 300px;
 } */
-
 
 /* Aris Fornasari's styling for 404 errors*/
 
@@ -221,4 +211,7 @@ h1 {
   100% {
     background: rgba(255, 255, 255, 0.4);
   }
+}
+
+.signup-btn {
 }
