--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
       </ul>
       <ul class="navbar-nav ">
         {% if request.user.username %}
-        <li class="nav-item">
+        <li class="nav-item" style="font-size: 14px;">
           <a class="nav-link" href="/virtual_tour/">
             Activate Virtual Tour
           </a>
