--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,7 +34,7 @@
       </ul>
       <div class="card-body">
         <a href="/edit/{{target_user.id}}" class="card-link">Edit Profile</a>
-        <a href="/message/user/{{target_ser.id}}" class="card-link">Message</a>
+        <a href="/message/user/{{target_user.id}}" class="card-link">Message</a>
         <a href="/user/{{target_user.id}}/messages" class="card-link">Messages({{messages.count}})</a>
       </div>
     </div>
