--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,9 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/notifications/">
             <i class="fa fa-envelope-o">
-              <span class="badge badge-warning">0</span>
+              <span class="badge badge-warning">{{notifications_count}}</span>
             </i>
             Notifications
           </a>
